tests/codegen/pass/027-slice-length.hyg
let n = 20;
let arr1: array {int} = array(n / 2, 3);
let arr2: array {int} = slice(arr1, n / 3 + 3, n  - 11);
print(arrayLength(arr2));
assert(arrayLength(arr2) = 1)
