tests/codegen/fail/021-array-slice-invalid-parent.hyg
let arr1 = array(0,0);
let arr2 = slice(arr1, 2, 6); ()
